// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ceramic API Caip10Link test Anchoring works 1`] = `
{
  "chainId": "inmemory:12345",
  "txType": "f(bytes32)",
}
`;

exports[`Ceramic API Caip10Link test Create and link DID 1`] = `
{
  "anchorStatus": 0,
  "content": null,
  "log": [
    {
      "cid": {
        "/": "bafyreig4iuf5hwilecv5tnj7ye6bypuqhzsyylzbhgnp5a5hkqyq5msdtu",
      },
      "type": 0,
    },
    {
      "cid": {
        "/": "bafyreicpwab3p5npsspjo33ensssgbw7n56xztcdeailct3m65og6inivi",
      },
      "type": 1,
    },
  ],
  "metadata": {
    "controllers": [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
  },
  "next": {
    "content": "did:3:bafysdfwefwe",
    "metadata": {
      "controllers": [
        "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
      ],
      "family": "caip10-eip155:1337",
      "lastUpdate": 1641461695,
    },
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create and link DID with legacy CAIP proof 1`] = `
{
  "anchorStatus": 0,
  "content": null,
  "log": [
    {
      "cid": {
        "/": "bafyreig4iuf5hwilecv5tnj7ye6bypuqhzsyylzbhgnp5a5hkqyq5msdtu",
      },
      "type": 0,
    },
    {
      "cid": {
        "/": "bafyreiebhvhkmq3akgb7y3bwwrfe4bqgf32k3khwzqe3uu224oricto454",
      },
      "type": 1,
    },
  ],
  "metadata": {
    "controllers": [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
  },
  "next": {
    "content": "did:3:bafysdfwefwe",
    "metadata": {
      "controllers": [
        "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
      ],
      "family": "caip10-eip155:1337",
      "lastUpdate": 1641461695,
    },
  },
  "signature": 2,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create from legacy account id 1`] = `
{
  "anchorStatus": 0,
  "content": null,
  "log": [
    {
      "cid": {
        "/": "bafyreig4iuf5hwilecv5tnj7ye6bypuqhzsyylzbhgnp5a5hkqyq5msdtu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
  },
  "next": {
    "content": null,
  },
  "signature": 0,
  "type": 1,
}
`;

exports[`Ceramic API Caip10Link test Create from valid account id 1`] = `
{
  "anchorStatus": 0,
  "content": null,
  "log": [
    {
      "cid": {
        "/": "bafyreig4iuf5hwilecv5tnj7ye6bypuqhzsyylzbhgnp5a5hkqyq5msdtu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "0x8fe2c4516e920425e177658aaac451ca0463ed69@eip155:1337",
    ],
    "family": "caip10-eip155:1337",
  },
  "next": {
    "content": null,
  },
  "signature": 0,
  "type": 1,
}
`;
